[package]
name = "src"
version = "0.1.0"
authors = ["Arthur Coelho"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
tungstenite = "0.11.x"
log = "0.4.x"
env_logger = "0.8.x"
url = "2.1.x"